Fix aligning

--- a/src/assets/styles/pages/SearchPage.scss
+++ b/src/assets/styles/pages/SearchPage.scss
@@ -63,7 +63,7 @@
         }
 
         .playlist-results {
-            margin-top: 8%;
+            // margin-top: 8%;
 
             .playlist-container {
                 display: flex;
